--- a/school.html
+++ b/school.html
@@ -37,6 +37,10 @@
 				</div>
 				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
 					<p class="nav-number">04</p>
+					<a class="nav-link" href="Subrun.html">// ISP</a>
+				</div>
+				<div class="nav-button"  onmouseleave="navExit(this)" onmouseenter="navEnter(this)">
+					<p class="nav-number">05</p>
 					<a class="nav-link" href="contact.html">// contact</a>
 				</div>
 			</div>
