changed file name

--- a/Subrun.html
+++ b/Subrun.html
@@ -76,7 +76,7 @@
 				</div>
 				<div id="urban-dev-image" class="info-image-container">
 					<div class="image-container">
-						<img class="info-image" src="assets/images/car2.png">
+						<img class="info-image" src="assets/images/car.png">
 					</div>
 				</div>
 			</div>
